// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalCreateQuestionnaire /> <TestModalCreateProject /> should render correctly 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <button
    aria-controls="id-g"
    aria-expanded={false}
    aria-haspopup="dialog"
    className="sc-bcXGCL sc-laZSpB couZHy hiHtil cap-button"
    data-cy="create-questionnaire-button"
    id="btn-add-questionnaire"
    onClick={[Function]}
    onClickCapture={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    type="button"
  >
    <svg
      className="sc-bcXGCL sc-eJDTud majJf hEjMCZ cap-icon"
      fill="none"
      viewBox="0 0 12 12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 6h10M6 1v10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    create-questionnaire
  </button>,
  <div
    aria-label="create-questionnaire"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ModalCreateQuestionnaire /> <TestModalCreateProject /> should render modal open 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <button
    aria-controls="id-g"
    aria-expanded={true}
    aria-haspopup="dialog"
    className="sc-bcXGCL sc-laZSpB couZHy hiHtil cap-button"
    data-cy="create-questionnaire-button"
    id="btn-add-questionnaire"
    onClick={[Function]}
    onClickCapture={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    type="button"
  >
    <svg
      className="sc-bcXGCL sc-eJDTud majJf hEjMCZ cap-icon"
      fill="none"
      viewBox="0 0 12 12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 6h10M6 1v10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    create-questionnaire
  </button>,
  <div
    aria-label="create-questionnaire"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bcXGCL hmVjey sc-gsGkXq cap-modal__overlay"
      onClick={[Function]}
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bcXGCL cxKkgx sc-bWOFNj dgbxsZ cap-modal"
        style={
          Object {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
          }
        }
      >
        <header
          className="sc-bcXGCL gcFVlf cap-modal__header"
        >
          <div
            className="sc-bcXGCL jqamMl"
          >
            <h2
              className="sc-bcXGCL jvuiiv cap-heading"
              style={
                Object {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              global.questionnaire
            </h2>
          </div>
          <button
            className="sc-bcXGCL kvTszR"
            onClick={[Function]}
            type="button"
          >
            <svg
              className="sc-bcXGCL sc-eJDTud egyLxf knzWyK cap-icon"
              fill="none"
              viewBox="0 0 12 12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11L11 1M1 1l10 10"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={0.8}
              />
            </svg>
          </button>
        </header>
        <main
          className="sc-bcXGCL fWaoBr cap-modal__body"
        >
          <form
            id="form-create-questionnaire"
          >
            <div
              className="sc-bcXGCL MbKIk cap-form-control"
              role="group"
            >
              <div
                className="sc-bcXGCL XfsJC cap-radio-group"
              >
                <label
                  className="sc-bcXGCL dFPdth"
                  htmlFor="type_choice-VOTING"
                >
                  <div
                    className="sc-bcXGCL fWTWt cap-radio"
                    style={
                      Object {
                        "marginLeft": 0,
                        "marginTop": 0,
                      }
                    }
                  >
                    <input
                      aria-required={true}
                      checked={false}
                      className="sc-bcXGCL fmkGYH cap-radio__input"
                      disabled={false}
                      id="type_choice-VOTING"
                      name="choices-for-field-type"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={true}
                      style={
                        Object {
                          "marginLeft": 0,
                          "marginTop": 0,
                        }
                      }
                      type="radio"
                    />
                    <div
                      className="sc-bcXGCL bdiOcu cap-radio__box"
                    />
                  </div>
                  <span
                    className="sc-bcXGCL bqoAcQ cap-text"
                  >
                    voting
                  </span>
                </label>
                <label
                  className="sc-bcXGCL dFPdth"
                  htmlFor="type_choice-QUESTIONNAIRE"
                >
                  <div
                    className="sc-bcXGCL fWTWt cap-radio"
                    style={
                      Object {
                        "marginLeft": 0,
                        "marginTop": 0,
                      }
                    }
                  >
                    <input
                      aria-required={true}
                      checked={true}
                      className="sc-bcXGCL fmkGYH cap-radio__input"
                      disabled={false}
                      id="type_choice-QUESTIONNAIRE"
                      name="choices-for-field-type"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={true}
                      style={
                        Object {
                          "marginLeft": 0,
                          "marginTop": 0,
                        }
                      }
                      type="radio"
                    />
                    <div
                      className="sc-bcXGCL bdiOcu cap-radio__box"
                    />
                  </div>
                  <span
                    className="sc-bcXGCL bqoAcQ cap-text"
                  >
                    global.questionnaire
                  </span>
                </label>
              </div>
            </div>
            <div
              className="sc-bcXGCL MbKIk cap-form-control"
              role="group"
            >
              <label
                className="sc-bcXGCL ituTec cap-form-label"
                htmlFor="title"
                style={
                  Object {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <p
                  className="sc-bcXGCL JNsrJ cap-text"
                  style={
                    Object {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                >
                  global.title
                </p>
              </label>
              <input
                aria-required={true}
                className="sc-bcXGCL sc-UpCiH gxubNH cvFBmb cap-input"
                data-cy="create-questionnaire-modal-title"
                disabled={false}
                id="title"
                maxLength={255}
                minLength={2}
                name="title"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="questionnaire-title-placeholder"
                required={true}
                type="text"
                value=""
              />
            </div>
          </form>
        </main>
        <footer
          className="sc-bcXGCL gsaGlp cap-modal__footer"
        >
          <div
            className="sc-bcXGCL hyIxtw cap-buttonGroup"
            style={
              Object {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <button
              className="sc-bcXGCL sc-laZSpB DTDIA iFfBPw cap-button"
              onClick={[Function]}
              style={
                Object {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
              type="button"
            >
              cancel
            </button>
            <button
              className="sc-bcXGCL sc-laZSpB DTDIA hiHtil cap-button"
              data-cy="create-questionnaire-modal-create-button"
              id="confirm-questionnaire-create"
              onClick={[Function]}
              type="submit"
            >
              global.send
            </button>
          </div>
        </footer>
      </div>
    </div>
  </div>,
]
`;
